--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,10 +36,10 @@
 
 <input type="text" [appInputFormat] = "'uppercase'">
 <br>
-<zippy title ="Shipping Details">
+<zippy title ="Shipping Details-1">
     Shipping Details Content
 </zippy>
-<zippy title ="Shipping Details">
+<zippy title ="Shipping Details-2">
     Shipping Details Content
 </zippy>
 
