--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <app-favorite [is-favorite]="post.isFavorite" (change)="onFavouriteChange($event)"></app-favorite> -->
-<contact-form></contact-form>
+<!-- <contact-form></contact-form>
 
 <br>
 <bootstrap-panel>
@@ -41,7 +41,10 @@
 </zippy>
 <zippy title ="Shipping Details-2">
     Shipping Details Content
-</zippy>
+</zippy> -->
+
+<app-posts></app-posts>   
+
 
 
 
